# VPR

./: .apply_task_projects.yaml  .clippy.toml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .last  .pre-commit-config.yaml  1.logic  AGENTS.md  AUDIT_FIXES_2025-12-03.md  AUDIT_REPORT_2025-11-27.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  DIAGNOSTICS.md  FLAGSHIP_ACTION_PLAN.md  FLAGSHIP_PROGRESS.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  SECURITY.md  SECURITY_REQUIREMENTS.md  SHIP_LOG.md  TARGETS.md  TODO.md  rustfmt.toml
.agents/: graph.json  memory_store.json
.agents/context/: 2025-11-04_architecture_context.jsonl
.claude/plans/: clippy-fixes-plan.md
.context-finder/: mtimes.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: audit_results_2024.md  clippy_analysis_findings.md  deep_audit_results_2024.md  project_purpose.md
.tasks/app/: TASK-002.task  TASK-003.task
.tasks/infra/: TASK-001.task  TASK-009.task
.tasks/src/: TASK-008.task  TASK-027.task
config/: doh.toml.sample  e2e.sample.json  masque.toml.sample  tls_fingerprint_overrides.json  tls_fp_sync_sources.json  vpr.yaml.sample
data/outbox/: .gitkeep
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.test.yml
docker/scripts/: run-tests.sh
docs/: AI_STEALTH_PLAN.md  AI_TRAFFIC_MORPHER.md  AUTO_DIAGNOSIS.md  E2E_TEST_REPORT.md  README.md  ROADMAP.md  UX_IMPROVEMENT_ROADMAP.md  architecture.md  compliance-checklist.md  disaster-recovery.md  security.md  tui-earth.md  user-guide.md
docs/archive/: AUDIT_HEURISTICS_STUBS.md  AUDIT_REPORT_2025-11-24.md  AUDIT_REPORT_2025-11-25.md  CODE_REVIEW.md  SECURITY_AUDIT_REPORT.md
docs/audit/: E2E_AUDIT_REPORT.md  masque_connect_udp_audit.md
docs/design/: masque-connect-udp.md  replay_protection.md
infra/: README.md
infra/ansible/: deploy.yml
infra/nix/: flake.nix
infra/systemd/: vpr-doh.service  vpr-masque.service
infra/terraform/: main.tf
ml/: .gitignore  requirements.txt  train_flagship.sh
ml/config/: tmt_20m_adversarial.yaml  tmt_20m_flagship.yaml  tmt_20m_ultimate.yaml
ml/configs/: tmt_20m.yaml
ml/scripts/: audit_dataset.py  collect_data.py  dpi_simulator.py  export_flagship_onnx.py  (+10 more)
scripts/: E2E_AUTOMATED_README.md  README.md  build_release.sh  diag_vpn.sh  diag_vpn_app.sh  diag_vpn_full.sh  diag_vpn_ultimate.sh  e2e_automated.sh  e2e_failover.sh  e2e_full_test.sh  e2e_harness.sh  e2e_install.sh  e2e_masque.sh  e2e_pki.sh  e2e_rotation.sh  e2e_simple_test.sh  e2e_tun.sh  e2e_vpn_test.sh  gen-noise-keys.sh  health-history.py  local-bootstrap.sh  run_client.sh  test_all_debug.sh  tls-fp-sync.py
secrets/: README.md
src/: README.md
src/doh-gateway/: Cargo.toml  README.md
src/doh-gateway/src/: main.rs
src/doh-gateway/tests/: integration.rs
src/health-harness/: Cargo.toml  README.md
src/health-harness/src/: main.rs
src/health-history/: Cargo.toml  README.md
src/health-history/src/: lib.rs  main.rs
src/health-history/tests/: basic.rs  parser.rs
src/masque-core/: Cargo.toml  README.md
src/masque-core/benches/: crypto_bench.rs
src/masque-core/src/: acme_client.rs  bootstrap.rs  canary_rollout.rs  cert_manager.rs  cover_traffic.rs  dns_updater.rs  domain_fronting.rs  dpi_feedback.rs  h3_server.rs  hybrid_handshake.rs  key_rotation.rs  lib.rs  main.rs  manifest_rotator.rs  masque.rs  network_guard.rs  noise_keys.rs  padding.rs  probe_protection.rs  quic_stream.rs  replay_protection.rs  rng.rs  stego_rss.rs  suspicion.rs  tls_fingerprint.rs  traffic_monitor.rs  transport.rs  tun.rs  tunnel.rs  vpn_common.rs  vpn_config.rs  vpn_tunnel.rs
src/masque-core/src/client/: args.rs  builders.rs  mod.rs  probe.rs  tls.rs
src/masque-core/src/diagnostics/: client.rs  cross_checks.rs  engine.rs  fixes.rs  mod.rs  server.rs  ssh_client.rs  tests.rs
src/masque-core/src/server/: args.rs  builders.rs  ip_pool.rs  metrics.rs  mod.rs  state.rs  suspicion.rs  tls.rs  tun_tasks.rs
src/masque-core/src/tun/: device.rs  dns.rs  ipv6.rs  mod.rs  nat.rs  packet.rs  routing.rs  split_tunnel.rs  state.rs
src/masque-core/tests/: acme_cert_dns_integration.rs  dns_configuration.rs  dns_updater_helpers.rs  dns_updater_unit.rs  dpi_feedback_integration.rs  h3_server_paths.rs  integration.rs  manifest_integration.rs  manifest_rotator_ext.rs  manifest_rotator_unit.rs  masque_comprehensive.rs  masque_integration.rs  masque_rfc9298.rs  noise_handshake_integration.rs  probe_integration.rs  property_tests.rs  quic_stream_unit.rs  replay_integration.rs  routing_nat_integration.rs  routing_policy_unit.rs  stego_rss_integration.rs  traffic_monitor_integration.rs  tun_helpers.rs  vpn_tunnel_unit.rs
src/vpr-ai/: CODE_REVIEW.md  Cargo.toml  README.md  SHIP_LOG.md
src/vpr-ai/assets/: tmt-20m.onnx
src/vpr-ai/src/: cover.rs  dpi_simulator.rs  e2e_test.rs  features.rs  lib.rs  morpher.rs  profiles.rs
src/vpr-app/: Cargo.toml  README.md  package-lock.json  tauri.conf.json
src/vpr-app/frontend/: app.js  globe.js  index.html  style.css  test-canvas.html  tui.html  tui.js
src/vpr-app/icons/: icon.icns
src/vpr-app/src/: connection_diagnostics.rs  deployer.rs  diagnostics_commands.rs  killswitch.rs  main.rs  process_manager.rs  tui_bridge.rs
src/vpr-crypto/: Cargo.toml  README.md
src/vpr-crypto/src/: constant_time.rs  error.rs  keys.rs  lib.rs  manifest.rs  noise.rs  pki.rs  rng.rs  seal.rs
src/vpr-crypto/tests/: kat.rs  keys_invalid.rs  keys_seal_pki.rs  keys_zeroize.rs  seal_errors.rs  seal_tamper.rs
src/vpr-e2e/: Cargo.toml  README.md
src/vpr-e2e/src/: config.rs  deployer.rs  lib.rs  main.rs  report.rs  tests.rs
src/vpr-e2e/tests/: basic.rs  full_pipeline.rs  report_unit.rs
src/vpr-tui/: Cargo.toml  README.md
src/vpr-tui/src/: app.rs  ascii_art.rs  config.rs  frame.rs  globe.rs  lib.rs  main.rs  render.rs  vpn.rs
src/vpr-tui/src/render/: tests.rs
src/vpr-tui/tests/: frame_extra.rs  render_full.rs  render_smoke.rs  snapshot.rs
src/vpr-tui/tests/fixtures/: frame.txt
tests/: test_health_parser.py
(+16 files in other folders)
