[package]
name = "doh-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
base64 = "0.22"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "net", "io-util"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
config = { version = "0.14", default-features = false, features = ["toml"] }

quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "2.1"
rcgen = "0.13"
futures = "0.3"
odoh-rs = "1.0.4"
rand = "0.8"
masque-core = { path = "../masque-core" }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
