[package]
name = "health-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.11"
clap = { version = "4.5", features = ["derive"] }
hpke = "0.13"
odoh-rs = "1.0.4"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rand = { version = "0.9", features = ["std", "os_rng"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "0.7"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "net", "time"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
