[package]
name = "health-history"
version = "0.1.0"
edition = "2021"

[lib]
name = "health_history"
path = "src/lib.rs"

[[bin]]
name = "health-history"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
