[package]
name = "masque-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "sync", "signal"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.1"
rcgen = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
quinn = { version = "0.11", features = ["runtime-tokio"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.2"
bytes = "1.10"
tokio-tun = "0.12"
nix = { version = "0.29", features = ["net", "ioctl"] }
snow = "0.9"
x25519-dalek = "2.0"
hex = "0.4"
webpki-roots = "0.26"
serde_json = "1.0"
rand = "0.8"
sha2 = "0.10"
md5 = "0.7"
libc = "0.2"

# VPR crypto with hybrid PQ Noise
vpr-crypto = { path = "../vpr-crypto" }

[[bin]]
name = "vpn-client"
path = "src/bin/vpn_client.rs"

[[bin]]
name = "vpn-server"
path = "src/bin/vpn_server.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "io-util", "net", "sync", "time"] }
