[package]
name = "vpr-ai"
version = "0.1.0"
edition = "2021"
description = "AI-powered traffic morphing for VPR VPN"

[features]
default = []
# Internal: enables ONNX code path without specifying runtime linking method
_onnx_core = ["dep:ort"]
# ONNX inference with system library (requires libonnxruntime.so 1.22.x)
onnx = ["_onnx_core", "ort/load-dynamic"]
# ONNX inference with bundled runtime (larger binary but self-contained)
# Use this for development/testing when system ONNX Runtime version doesn't match
onnx-bundled = ["_onnx_core", "ort/download-binaries"]
training = []  # Enable training utilities

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"

# ONNX Runtime for inference
# Features are controlled by onnx/onnx-bundled features above
# std: needed for Error trait impl; ndarray: tensor handling
ort = { version = "2.0.0-rc.10", optional = true, default-features = false, features = ["std", "ndarray"] }

# Feature extraction
ndarray = "0.16"

# Timing
tokio = { version = "1.39", features = ["time", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Cryptographically secure random for cover traffic
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
