[package]
name = "vpr-app"
version = "0.1.0"
edition = "2021"
description = "VPR Stealth VPN Client"

[[bin]]
name = "vpr-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
directories = "5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
which = "6.0"
nix = { version = "0.30", features = ["signal"] }
libc = "0.2"

# Diagnostics
masque-core = { path = "../masque-core" }

[target.'cfg(unix)'.dependencies]
caps = "0.5"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
