[package]
name = "vpr-e2e"
version = "0.1.0"
edition = "2021"
description = "VPR E2E testing framework - automated deployment, testing, and reporting"

[[bin]]
name = "vpr-e2e"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
ssh2 = "0.9"
rand = "0.8"
hex = "0.4"
dirs = "5.0"
which = "6"
colored = "2"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"
