[package]
name = "vpr-tui"
version = "0.1.0"
edition = "2021"
description = "VPR VPN Terminal UI - Watch Dogs 2 hacker aesthetic"

[dependencies]
anyhow = "1"
crossterm = "0.27"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "process", "net", "io-util", "macros", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
chrono = "0.4"
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
approx = "0.5"
